Fix border cut off issue on <ListItem/> components

--- a/src/Components/SlideList/SlideList.module.css
+++ b/src/Components/SlideList/SlideList.module.css
@@ -14,6 +14,7 @@
 
 .wrapper {
   position: relative;
+  padding: 1px; /* Padding must exist to prevent cutting off border from ListItems*/
 }
 
 .wrapper .sliderArrow {
